# ros-experiments

./: README.txt  rkill  rstart
test1/: README.txt
test1/my_turtle/: CMakeLists.txt  package.xml
test1/my_turtle/launch/: move_turtle.launch
test1/my_turtle/src/: Move_Turtle.cpp
test1/stopper/: CMakeLists.txt  package.xml
test1/stopper/launch/: obst_turtle.launch
test1/stopper/src/: AvoidObst_Turtle.cpp
test2/: README.txt  run.sh
test2/move_straight/launch/: moveRobot.launch
test2/rqt_bag/: beam_cov_2017-09-25-10-38-39.bag  likelihoodfield_cov_2017-09-25-10-40-11.bag
test2/set_amclinitpose/: CMakeLists.txt
test2/set_amclinitpose/launch/: comparison_sensormodels.launch
test2/set_amclinitpose/src/: SetInitPoseAMCL.cpp
test3/: README.txt  removed.info  run.sh
test3/move_straight/: CMakeLists.txt  package.xml
test3/move_straight/launch/: moveRobot.launch.new
test3/move_straight/src/: MoveStraightLine.cpp
test3/rqt_bag/: odom_cov_2017-10-11-15-46-50.bag  velo_cov_2017-10-11-15-36-28.bag
test3/set_amclinitpose/: package.xml
test3/set_amclinitpose/src/: SetInitPoseAMCL.cpp
test4/: README.txt  tips.info
test4/send_goals/: package.xml
test4/send_goals/src/: giveWaypoints.cpp
test4/set_amclinitpose/src/: SetInitPoseAMCL.cpp
test4/simple_navigation_goals/: package.xml
test4/simple_navigation_goals/launch/: simpleGoal.launch
test4/simple_navigation_goals/src/: simple_navigation_goals.cpp
test4/src/send_goals/: CMakeLists.txt
test4/src/send_goals/launch/: send_goals.launch
test4/src/set_amclinitpose/launch/: navigation_test_part1.launch  navigation_test_part2.launch
test5/: README.txt  run.sh
test5/src/explore_map/: CMakeLists.txt  package.xml
test5/src/explore_map/launch/: explore_map_node.launch
test5/src/explore_map/src/: ExploreMap.cpp  ExploreMap.h
