<?xml version="1.0"?>
<package>
	<name>explore_map</name>
	<version>1.2.4</version>
	<description>
		This package attempts to answer Homework 5, Part II, Questions (a) and (b).
	</description>
	<maintainer email="adamking.br549@gmail.com">Adam King</maintainer>
	<license>GPLv3</license>

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
</package>
